# projeto-analise-de-dados-enem-2023

./: main.py  pyproject.toml
data/: dados_enem_2021_BA.csv
data/output/: enem_2023_tratado.csv
notebooks/: enem_exploratory.ipynb
secrets/: .env.example
src/config/: logger.py
src/services/: openai_service.py  streamlit_service.py
src/utils/: prompt.py
treinamento/: analisys_train.ipynb  pandas_train.ipynb
